# python-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
docs/source/: index.rst  src.rst
src/: main.py
tests/: conftest.py  test_sample.py
